--- a/css/flex.css
+++ b/css/flex.css
@@ -45,6 +45,7 @@ a:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-size: 20px;
 }
 
 .container .header .header-link {
@@ -61,14 +62,36 @@ a:focus {
   color: orange;
 }
 
+@media (max-width: 400px) {
+  .container .header .header-link {
+    position: static;
+    top: auto;
+    right: auto;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container .header {
+    position: static;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 15px;
+  }
+}
+
 .container .main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -79,6 +102,115 @@ a:focus {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  position: relative;
+}
+
+.container .main .main-content-wrapper {
+  width: 100%;
+  position: relative;
+}
+
+.container .main .main-content-wrapper .main-content-left {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  -webkit-transform: translate(-25%, -50%);
+          transform: translate(-25%, -50%);
+}
+
+@media (max-width: 1000px) {
+  .container .main .main-content-wrapper .main-content-left {
+    position: static;
+    top: auto;
+    left: auto;
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+.container .main .main-content-wrapper .main-content-right {
+  position: absolute;
+  top: 50%;
+  right: 25%;
+  -webkit-transform: translate(25%, -50%);
+          transform: translate(25%, -50%);
+}
+
+.container .main .main-content-wrapper .main-content-right pre {
+  position: relative;
+  margin: 0;
+}
+
+.container .main .main-content-wrapper .main-content-right pre hr {
+  position: absolute;
+  top: 18px;
+  width: 100%;
+}
+
+@media (max-width: 400px) {
+  .container .main .main-content-wrapper .main-content-right pre hr {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container .main .main-content-wrapper .main-content-right {
+    position: static;
+    top: auto;
+    left: auto;
+    -webkit-transform: none;
+            transform: none;
+    padding: 25px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container .main .main-content-wrapper .main-content-right {
+    padding: 15px 0;
+    right: 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container .main .main-content-wrapper {
+    position: static;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.container .main .subtitle {
+  position: absolute;
+  bottom: 0;
+  margin: 0 0 18px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+@media (max-width: 1000px) {
+  .container .main .subtitle {
+    position: static;
+    margin: 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container .main {
+    position: static;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .container .footer {
