--- a/scss/flex.scss
+++ b/scss/flex.scss
@@ -12,6 +12,7 @@
     .header-title {
       display: flex;
       justify-content: center;
+      font-size: 20px;
     }
     .header-link {
       position: absolute;
@@ -24,15 +25,112 @@
           color: orange;
         }
       }
+
+      @media (max-width: 400px) {
+        position: static;
+        top: auto;
+        right: auto;
+        padding: 10px;
+      }
+    }
+
+    @media (max-width: 400px) {
+      position: static;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      margin-bottom: 15px;
     }
   }
   .main {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: black;
     flex: 1 1 auto;
+    position: relative;
+
+    .main-content-wrapper {
+      width: 100%;
+      position: relative;
+
+      .main-content-left {
+        position: absolute;
+        top: 50%;
+        left: 25%;
+        transform: translate(-25%, -50%);
+
+        @media (max-width: 1000px) {
+          position: static;
+          top: auto;
+          left: auto;
+          transform: none;
+        }
+      }
+
+      .main-content-right {
+        position: absolute;
+        top: 50%;
+        right: 25%;
+        transform: translate(25%, -50%);
+
+        pre {
+          position: relative;
+          margin: 0;
+
+          hr {
+            position: absolute;
+            top: 18px;
+            width: 100%;
+
+            @media (max-width: 400px) {
+              display: none;
+            }
+          }
+
+          @media (max-width: 400px) {
+          }
+        }
+
+        @media (max-width: 1000px) {
+          position: static;
+          top: auto;
+          left: auto;
+          transform: none;
+          padding: 25px;
+          font-size: 14px;
+        }
+
+        @media (max-width: 400px) {
+          padding: 15px 0;
+          right: 0;
+        }
+      }
+
+      @media (max-width: 1000px) {
+        position: static;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+    .subtitle {
+      position: absolute;
+      bottom: 0;
+      margin: 0 0 18px;
+      font-weight: bold;
+      font-size: 18px;
+
+      @media (max-width: 1000px) {
+        position: static;
+        margin: 0;
+      }
+    }
+
+    @media (max-width: 1000px) {
+      position: static;
+      flex-direction: column;
+    }
   }
 
   .footer {
