--- a/css/position.css
+++ b/css/position.css
@@ -21,41 +21,75 @@ a:focus {
   text-decoration: none;
 }
 
-.container {
-  position: relative;
-  min-height: 100%;
+body {
+  background: #333;
 }
 
-.container .header {
+.container {
+  position: relative;
+  height: 100%;
+}
+
+.container .content-wrap {
+  padding-bottom: 50px;
+}
+
+.container .content-wrap .header {
   background: yellow;
   color: blue;
   position: relative;
 }
 
-.container .header .header-title {
+.container .content-wrap .header .header-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-size: 20px;
 }
 
-.container .header .header-link {
+.container .content-wrap .header .header-link {
   position: absolute;
   top: 5px;
   right: 10px;
 }
 
-.container .header .header-link a {
+.container .content-wrap .header .header-link a {
   color: blue;
 }
 
-.container .header .header-link a:hover {
+.container .content-wrap .header .header-link a:hover {
   color: orange;
 }
 
-.container .main {
+@media (max-width: 400px) {
+  .container .content-wrap .header .header-link {
+    position: static;
+    top: auto;
+    right: auto;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container .content-wrap .header {
+    position: static;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.container .content-wrap .main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -63,21 +97,51 @@ a:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .content-wrap .main .main-content-wrapper {
+  padding-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: black;
-  padding-bottom: 50px;
+}
+
+.container .content-wrap .main .main-content-wrapper .main-content-right {
+  background: grey;
+  color: white;
+}
+
+.container .content-wrap .main .subtitle {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  height: 150px;
+  line-height: 150px;
+}
+
+.container .content-wrap .main .subtitle p {
+  margin: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .container .footer {
   position: absolute;
-  height: 50px;
   width: 100%;
+  bottom: 0;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
   background: blue;
   color: white;
-  text-align: center;
 }
