--- a/scss/position.scss
+++ b/scss/position.scss
@@ -1,94 +1,143 @@
 @import "null";
-
+html,
 body {
-  background: #333;
+  height: auto;
 }
 
 .container {
   position: relative;
   height: 100%;
-  .content-wrap {
-    padding-bottom: 50px;
-
+  .content-wrapper {
+    padding-bottom: 70px;
+    background: #333;
     .header {
-      background: yellow;
-      color: blue;
-      position: relative;
-
-      .header-title {
+      .header-wrapper {
+        position: relative;
+        background: yellow;
+        color: blue;
         display: flex;
+        align-items: center;
         justify-content: center;
-        font-size: 20px;
-      }
-      .header-link {
-        position: absolute;
-        top: 5px;
-        right: 10px;
-        a {
-          color: blue;
+        .header-title {
+          height: 70px;
+          line-height: 70px;
+          .header-title-text {
+            font-size: 20px;
+            margin: 0;
+          }
 
-          &:hover {
-            color: orange;
+          @media (max-width: 800px) {
+            height: 40px;
+            line-height: 40px;
           }
         }
 
-        @media (max-width: 400px) {
-          position: static;
-          top: auto;
-          right: auto;
-          padding: 10px;
-        }
-      }
+        .header-nav {
+          position: absolute;
+          right: 5px;
+          top: 5px;
+          .header-nav-link {
+            color: blue;
 
-      @media (max-width: 400px) {
-        position: static;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
+            &:hover {
+              color: orange;
+            }
+          }
+
+          @media (max-width: 800px) {
+            position: static;
+            right: auto;
+            top: auto;
+            padding-top: 8px;
+          }
+        }
+
+        @media (max-width: 800px) {
+          flex-direction: column-reverse;
+        }
       }
     }
 
     .main {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      .main-content-wrapper {
-        padding-top: 10px;
+      .main-content {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
-        .main-content-left {
+        padding: 20px 0;
+        margin: 0 10px;
+        .main-left {
+          margin-right: 10px;
+          .main-left-img {
+          }
+
+          @media (max-width: 700px) {
+            margin: 0;
+            padding-bottom: 10px;
+          }
         }
-        .main-content-right {
+        .main-right {
+          margin-left: 10px;
           background: grey;
-          color: white;
+          color: #fff;
+          .main-right-text {
+            margin: 0;
+
+            @media (max-width: 800px) {
+              white-space: pre-wrap;
+              max-width: 500px;
+            }
+
+            @media (max-width: 700px) {
+              width: 300px;
+            }
+          }
+
+          @media (max-width: 700px) {
+            margin: 0;
+          }
+        }
+
+        @media (max-width: 700px) {
+          flex-direction: column;
+          padding: 10px 0;
         }
       }
-      .subtitle {
-        text-align: center;
-        color: white;
-        font-weight: bold;
-        font-size: 20px;
-        height: 150px;
-        line-height: 150px;
 
-        p {
-          margin: 0;
-          display: inline-block;
-          vertical-align: middle;
+      .main-title {
+        text-align: center;
+        .main-title-text {
+          color: #fff;
+          font-size: 20px;
+
+          @media (max-width: 400px) {
+            font-size: 18px;
+          }
+
+          @media (max-width: 370px) {
+            font-size: 16px;
+          }
         }
       }
     }
   }
-
   .footer {
     position: absolute;
-    width: 100%;
     bottom: 0;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
     background: blue;
-    color: white;
+    .footer-title {
+      .footer-title-text {
+        text-align: center;
+        margin: 0;
+        color: #fff;
+      }
+    }
+
+    @media (max-width: 800px) {
+      height: 60px;
+      line-height: 60px;
+    }
   }
 }
