--- a/css/position.css
+++ b/css/position.css
@@ -1,6 +1,6 @@
 body,
 html {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   height: 100%;
   margin: 0;
